修复快捷性能测试